fixed navbar z-index

--- a/src/components/Navigation/navigation.module.css
+++ b/src/components/Navigation/navigation.module.css
@@ -8,7 +8,7 @@ display: flex;
 align-items: center;
 justify-content: space-around;
 box-sizing: border-box;
-z-index: 2;
+z-index: 5;
 
 
 }
