--- a/src/pages/ViewCard/viewCard.module.css
+++ b/src/pages/ViewCard/viewCard.module.css
@@ -10,6 +10,7 @@ justify-content: start;
 flex-direction: column;
 margin-bottom: 15vh;
 position: relative;
+z-index: 99;
 }
 
 .closeBtn{
@@ -107,6 +108,7 @@ a {
 .saveBtn{
     width: 80%;
     height: 75%;
+    z-index: 99;
     margin-bottom: 0%;
     background-color: #5B0888;
     border: none;
